--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,12 @@ Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
+Style/StringLiterals:
+  Enabled: false
+Style/FrozenStringLiteralComment:
+  Enabled: false
+Style/SymbolArray:
+  Enabled: false
 
 Layout/AlignHash:
   EnforcedColonStyle: key
@@ -33,3 +39,7 @@ Layout/ExtraSpacing:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
+
+Bundler/OrderedGems:
+  Enabled: false
+  
