addin logic to sessions#create and generating an integration test for login

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,6 +39,8 @@ Layout/ExtraSpacing:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
+Layout/TrailingWhitespace:
+  Enabled: false
 
 Bundler/OrderedGems:
   Enabled: false
