redundantself cop disabled

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,6 +31,8 @@ Style/FrozenStringLiteralComment:
   Enabled: false
 Style/SymbolArray:
   Enabled: false
+Style/RedundantSelf:
+  Enabled: false
 
 Layout/AlignHash:
   EnforcedColonStyle: key
