--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -37,6 +37,12 @@ malory:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+rose:
+  name: Rose Park
+  email: chaeyoung@example.gov
+  password_digest: <%= User.digest('password') %>
+  activated: false
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
