--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,9 +1,20 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  content: MyText
+orange:
+  content: "I just ate an orange!"
   user: one
+  created_at: <%= 10.minutes.ago %>
 
-two:
-  content: MyText
+tau_manifesto:
+  content: "Check out the @tauday site by @mhartl: http://tauday.com"
   user: two
+  created_at: <%= 3.years.ago %>
+
+cat_video:
+  content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
+  user: one
+  created_at: <%= 2.hours.ago %>
+
+most_recent:
+  content: "Writing a short test"
+  user: two
+  created_at: <%= Time.zone.now %>
